client/src/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  background-color: #222;
  height: 150px;
  padding: 20px;
  color: white;
}

.App-intro {
  font-size: large;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}


/* Style the header */

.header {
  background-color: #f44336;
  padding: 30px 40px;
  /*color: white;*/
  text-align: center;
}


/* Clear floats after the header */

.header:after {
  content: "";
  display: table;
  clear: both;
}

/* Style the "Add" button */

.addBtn {
  padding: 10px;
  font-size: 14px;
  cursor: pointer;
  transition: 0.3s;
}

.todo-container {
  font-size: 16px;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: flex-start;
}

.todo-row {
  display: flex;
  flex-direction: row;
}

.todo-row-first {
  font-weight: 700;
}

.todo-row-second {
  margin-top: 10px;
  text-indent: 10px;
}

.todo-name {
  flex-grow: 1;
}

/* Style the close button */
.icon-right {
  margin: 10px;
  border-radius: 2px;
  padding: 5px;
  color: #fff;
  text-transform: capitalize;
  align-self: flex-end;
}

.icon-close {
  color: #000;
}

.icon-right.icon-close:hover {
  background-color: #f44336;
  color: #fff;
}

.URGENT {
  background-color: #f44336;
}

.IMPORTANT {
  background-color: #ece662;
}

.NORMAL {
  background-color: #5de95d;
}

.add-todo-form input, .add-todo-form textarea, .add-todo-form select {
  display: inline-block;
  width: 75%;
  margin: 10px 0;
  border-radius: 0;
  vertical-align: middle;
}

.view-mode {
  padding: 10px;
}

.view-total {
  line-height: 60px;
}

label {
  display: inline-block;
  width: 25%;
}

select {
  text-align: center;
  background-color: #fff;
  color: #000;
  height: 40px;
  width: 100%;
}

